--- a/src/index.scss
+++ b/src/index.scss
@@ -303,6 +303,15 @@ body {
 //   margin: 100px 0;
 // }
 
+@keyframes rotateImg {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(-10deg);
+  }
+}
+
 .header {
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -336,6 +345,13 @@ body {
     position: absolute;
     top: 0;
     img {
+      animation-iteration-count: infinite;
+      animation-name: rotateImg;
+      animation-play-state: running;
+      animation-duration: 1.5s;
+
+      animation-direction: alternate;
+      animation-direction: alternate;
       max-width: 100%;
       height: 100%;
       object-fit: cover;
@@ -445,6 +461,7 @@ body {
 }
 
 .try {
+  margin-top: 100px;
   &__title {
     margin-bottom: 65px;
   }
